--- a/zhihu/zhihu.html
+++ b/zhihu/zhihu.html
@@ -14,7 +14,7 @@
     body {
       margin: 0;
       height: 100%;
-      background-color: #fff;
+      background-color: #000;
     }
     canvas {
       display: block;
@@ -22,5 +22,65 @@
       height: 100%;
     }
   </style>
+  <canvas id="canvas"></canvas>
+  <script>
+    // 创建一个以圆为对象
+    class Circle {
+      // x为圆心x坐标，y为圆心y坐标，r为圆半径
+      constructor (x, y) {
+        this.x = x;
+        this.y = y;
+        this.r = Math.random() * 10;
+      }
+      // 绘制圆
+      drawCircle (ctx) {
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.r, 0, 360);
+        ctx.closePath();
+        ctx.fillStyle = 'rgba(204, 204, 204, 0.6)';
+        ctx.fill();
+      }
+      // 绘制直线
+      drawLine(ctx, circle) {
+        let dx = this.x - circle.x;
+        let dy = this.y - circle.y;
+        let dis = Math.sqrt(dx * dx + dy * dy); // 计算两个circle之间的距离
+        if (dis < 150) {
+          ctx.beginPath();
+          ctx.moveTo(this.x, this.y); // 先移动到起点
+          ctx.lineTo(circle.x, circle.y); // 画到终点
+          ctx.closePath();
+          ctx.strokeStyle = 'rgba(204, 204, 204, 0.6)';
+          ctx.stroke();
+        }
+      }
+    }
+    let canvas = document.getElementById('canvas');
+    let ctx = canvas.getContext('2d');
+    let w = canvas.width = canvas.offsetWidth;
+    let h = canvas.height = canvas.offsetHeight;
+    let circles = [];
+
+    window.requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
+
+    let draw = () => {
+      ctx.clearRect(0, 0, w, h);
+      circlesLen = circles.length;
+      for (let i = 0; i < circlesLen; i ++) {
+        circles[i].drawCircle(ctx);
+        for (let j = i + 1; j < circlesLen; j ++) {
+          circles[i].drawLine(ctx, circles[j]);
+        }
+      }
+      requestAnimationFrame(draw);
+    }
+    let init = (circleCount) => {
+      for (let i = 0; i < circleCount; i ++) {
+        circles.push(new Circle(Math.random() * w, Math.random() * h));
+      }
+      draw();
+    }
+    window.addEventListener('load', init(60));
+  </script>
 </body>
 </html>
