--- a/zhihu/zhihu.html
+++ b/zhihu/zhihu.html
@@ -25,55 +25,123 @@
   <canvas id="canvas"></canvas>
   <script>
     // 创建一个以圆为对象
-    class Circle {
-      // x为圆心x坐标，y为圆心y坐标，r为圆半径
-      constructor (x, y) {
-        this.x = x;
-        this.y = y;
-        this.r = Math.random() * 10;
-      }
-      // 绘制圆
-      drawCircle (ctx) {
+    // class Circle {
+    //   // x为圆心x坐标，y为圆心y坐标，r为圆半径，mx、my为移动的横纵坐标
+    //   constructor (x, y) {
+    //     this.x = x;
+    //     this.y = y;
+    //     this.r = Math.random() * 10;
+    //     this.mx = Math.random();
+    //     this.my = Math.random();
+    //   }
+    //   // 绘制圆
+    //   drawCircle (ctx) {
+    //     ctx.beginPath();
+    //     ctx.arc(this.x, this.y, this.r, 0, 360);
+    //     ctx.closePath();
+    //     ctx.fillStyle = 'rgba(204, 204, 204, 0.6)';
+    //     ctx.fill();
+    //   }
+    //   // 绘制直线
+    //   drawLine(ctx, circle) {
+    //     let dx = this.x - circle.x;
+    //     let dy = this.y - circle.y;
+    //     let dis = Math.sqrt(dx * dx + dy * dy); // 计算两个circle之间的距离
+    //     if (dis < 150) {
+    //       ctx.beginPath();
+    //       ctx.moveTo(this.x, this.y); // 先移动到起点
+    //       ctx.lineTo(circle.x, circle.y); // 画到终点
+    //       ctx.closePath();
+    //       ctx.strokeStyle = 'rgba(204, 204, 204, 0.6)';
+    //       ctx.stroke();
+    //     }
+    //   }
+    //   // 圆点的移动
+    //   move(w, h) {
+    //     this.mx = (this.x < 0 || this.x > w) ? -this.mx : this.mx;
+    //     this.my = (this.y < 0 || this.y > h) ? -this.my : this.my;
+    //     this.x += this.mx / 2;
+    //     this.y += this.my / 2;
+    //   }
+    // }
+    
+    function Circle(x, y) {
+      this.x = x;
+      this.y = y;
+      this.r = Math.random() * 10;
+      this.mx = Math.random();
+      this.my = Math.random();
+    }
+    console.log(Circle.prototype);
+    Object.assign(Circle.prototype, {
+      drawCircle(ctx) {
         ctx.beginPath();
         ctx.arc(this.x, this.y, this.r, 0, 360);
         ctx.closePath();
         ctx.fillStyle = 'rgba(204, 204, 204, 0.6)';
         ctx.fill();
-      }
-      // 绘制直线
+      },
       drawLine(ctx, circle) {
         let dx = this.x - circle.x;
         let dy = this.y - circle.y;
-        let dis = Math.sqrt(dx * dx + dy * dy); // 计算两个circle之间的距离
+        let dis = Math.sqrt(dx * dx + dy * dy);
         if (dis < 150) {
-          ctx.beginPath();
-          ctx.moveTo(this.x, this.y); // 先移动到起点
-          ctx.lineTo(circle.x, circle.y); // 画到终点
+          ctx.beginPath()
+          ctx.moveTo(this.x, this.y);
+          ctx.lineTo(circle.x, circle.y);
           ctx.closePath();
           ctx.strokeStyle = 'rgba(204, 204, 204, 0.6)';
           ctx.stroke();
         }
+      },
+      move(w, h) {
+        this.mx = (this.x < 0 || this.x > w) ? -this.mx : this.mx;
+        this.my = (this.y < 0 || this.y > h) ? -this.my : this.my;
+        this.x += this.mx / 2;
+        this.y += this.my / 2;
+      }
+    });
+    console.log(Object.keys(Circle.prototype)); // 方法会返回一个由一个给定对象的自身可枚举属性组成的数组，数组中属性名的排列顺序和使用 for...in 循环遍历该对象时返回的顺序一致 
+    console.log(Object.getOwnPropertyNames(Circle.prototype)); // 方法返回一个由指定对象的所有自身属性的属性名（包括不可枚举属性但不包括Symbol值作为名称的属性）组成的数组。
+    // function mouseCircle() {
+    //   this.r = 8;
+    // }
+    // mouseCircle.prototype = new Circle();
+    class mouseCircle extends Circle {
+      constructor(x, y) {
+        super(x, y);
+        this.r = 5;
       }
     }
+    console.log(Object.keys(mouseCircle.prototype.__proto__)); // 方法会返回一个由一个给定对象的自身可枚举属性组成的数组，数组中属性名的排列顺序和使用 for...in 循环遍历该对象时返回的顺序一致 
+    console.log(Object.getOwnPropertyNames(mouseCircle.prototype)); // 方法返回一个由指定对象的所有自身属性的属性名（包括不可枚举属性但不包括Symbol值作为名称的属性）组成的数组。
     let canvas = document.getElementById('canvas');
     let ctx = canvas.getContext('2d');
     let w = canvas.width = canvas.offsetWidth;
     let h = canvas.height = canvas.offsetHeight;
-    let circles = [];
-
+    let circles = []; // 所有实例化对象点
+    let mouse_circle = new mouseCircle(0, 0);
     window.requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
-
+    // 绘制
     let draw = () => {
       ctx.clearRect(0, 0, w, h);
       circlesLen = circles.length;
       for (let i = 0; i < circlesLen; i ++) {
+        circles[i].move(w, h);
         circles[i].drawCircle(ctx);
         for (let j = i + 1; j < circlesLen; j ++) {
           circles[i].drawLine(ctx, circles[j]);
         }
       }
+      if (mouse_circle.x) {
+        mouse_circle.drawCircle(ctx);
+        for (let i = 1; i < circlesLen; i ++) {
+          mouse_circle.drawLine(ctx, circles[i]);
+        }
+      }
       requestAnimationFrame(draw);
     }
+    // 初始化所有点
     let init = (circleCount) => {
       for (let i = 0; i < circleCount; i ++) {
         circles.push(new Circle(Math.random() * w, Math.random() * h));
@@ -81,6 +149,18 @@
       draw();
     }
     window.addEventListener('load', init(60));
+
+    window.onmousemove = (e) => {
+      e = e || window.event;
+      mouse_circle.x = e.clientX;
+      mouse_circle.y = e.clientY;
+    }
+
+    window.onmouseout = (e) => {
+      e = e || window.event;
+      mouse_circle.x = null;
+      mouse_circle.y = null;
+    }
   </script>
 </body>
 </html>
