--- a/zhihu/global.html
+++ b/zhihu/global.html
@@ -72,7 +72,7 @@
       }
       requestAnimationFrame(draw);
     }
-    draw();
+    window.addEventListener('load', draw);
   </script>
 </body>
 </html>
