--- a/zhihu/colorbar.html
+++ b/zhihu/colorbar.html
@@ -7,21 +7,31 @@
   <title>Document</title>
 </head>
 <body>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    html, body {
+      height: 100%;
+    }
+    canvas {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  </style>
   <canvas id="canvas"></canvas>
   <script>
     let $canvas = document.getElementById('canvas');
     let ctx = $canvas.getContext('2d');
-    let pr = window.devicePixelRatio || 1; // 此属性返回当前显示设备的物理像素分辨率与CSS像素分辨率的比值
-    let w = window.innerWidth;
-    let h = window.innerHeight;
-    let f = 30;
+    let w = $canvas.width = $canvas.offsetWidth;
+    let h = $canvas.height = $canvas.offsetHeight;
+    let f = 70; // 初始两个点坐标，跨界判断，第三个点的生成，
     let point;
     let r = 0;
     let u = Math.PI * 2;
 
-    $canvas.width = w * pr;
-    $canvas.height = h * pr;
-    ctx.scale(pr, pr);
     ctx.globalAlpha = 0.6;
     
     function draw() {
@@ -34,8 +44,10 @@
         y: h * .7 - f
       }];
       while (point[1].x < w + f) {
+        console.log(point[1]);
         drawAngle(point[0], point[1]);
       }
+      // drawAngle(point[0], point[1]);
     }
 
     function drawAngle(p1, p2) {
@@ -43,13 +55,15 @@
       ctx.moveTo(p1.x, p1.y);
       ctx.lineTo(p2.x, p2.y);
       let p3 = {
-        x: p2.x + (Math.random() * 2 - 0.25) * f,
+        x: p2.x + (Math.random() * 2 - 0.25) * f, // (-0.25, 1.75) * f
         y: getP2Y(p2.y)
       };
       ctx.lineTo(p3.x, p3.y);
       ctx.closePath();
       r += u / 50; // r += 1/25 PI
       ctx.fillStyle = '#' + (Math.cos(r) * 127 + 128 << 16 | Math.cos(r + u / 3) * 127 + 128 << 8 | Math.cos(r + u / 3 * 2) * 127 + 128).toString(16);
+      // let color = (Math.cos(r) * 127 + 128 << 16 | Math.cos(r + u / 3) * 127 + 128 << 8 | Math.cos(r + u / 3 * 2) * 127 + 128).toString(16);
+      // ctx.fillStyle = color.length < 6 ? '#0' + color : '#' + color;
       ctx.fill();
       point[0] = point[1];
       point[1] = {
@@ -61,7 +75,13 @@
       let t = y + (Math.random() * 2 - 1.1) * f;
       return (t > h || t < 0) ? getP2Y(y) : t; // 如果在范围重新生成
     }
+    $canvas.onclick = draw;
     draw();
+
+    function singleNumber(nums) {
+      return nums.reduce((total, current) => total ^ current);
+    }
+    console.log(singleNumber([1, 2, 3, 3, 2]))
   </script>
 </body>
 </html>
